# polymarket_reward_farmer

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml
src/: infra.rs  main.rs  market.rs  market_logic.rs  types.rs  websockets.rs
src/engine/: bot_manager.rs
src/infra/: api.rs  client.rs  config.rs
src/market/: logic.rs
src/market_logic/: market.rs  market_types.rs
src/types/: channel_types.rs  token_ids.rs
src/websockets/: market_websocket.rs  user_websocket.rs  ws_types.rs
